fixing menu on iPhone/iPad

--- a/content/css/core.css
+++ b/content/css/core.css
@@ -246,7 +246,7 @@ body{
 
 
     width: 100%;
-    height: 480px;
+    min-height: 480px;
     overflow: auto;
 
     -moz-border-radius: 5px;
